# B-spline_demo

./: README.md
demo_ws/.cache/clangd/index/: lbfgs.hpp.00A78EBC44F2FD27.idx  optimizer.hpp.9CEF909A133BDE5E.idx  publisher.cpp.7C03F88568ED03C0.idx  rosidl_generator_cpp__visibility_control.hpp.C08270553D84A4C2.idx  spline.hpp.FB9D77ACBD865B24.idx  trajectory.hpp.16EAA7641AF0B092.idx  trajectory__builder.hpp.47525CFA2861537D.idx  trajectory__struct.hpp.68C2B93619E1DF54.idx  trajectory__traits.hpp.A38DC0CDBF1773C4.idx  trajectory__type_support.hpp.BDB0661BB6ACB5C1.idx
demo_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
demo_ws/install/cpp_bs_demo/lib/cpp_bs_demo/: point_generator
demo_ws/install/cpp_bs_demo/share/cpp_bs_demo/: package.dsv  package.ps1  package.sh  package.xml
demo_ws/install/cpp_bs_demo_interfaces/share/cpp_bs_demo_interfaces/: local_setup.sh  package.sh  package.zsh
demo_ws/log/: latest_build  latest_list
demo_ws/src/cpp_bs_demo/: CMakeLists.txt  frames_2025-05-12_05.43.44.gv  package.xml
demo_ws/src/cpp_bs_demo/src/: BSpline_optimizer.cpp  BSpline_optimizer.hpp  lbfgs.hpp  optimizer.hpp  publisher.cpp  spline.hpp
demo_ws/src/cpp_bs_demo/urdf/: ball_obstacle.urdf
demo_ws/src/cpp_bs_demo_interfaces/: CMakeLists.txt  package.xml
demo_ws/src/cpp_bs_demo_interfaces/msg/: Trajectory.msg
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/cpp_bs_demo/lib/cpp_bs_demo/: point_generator
install/cpp_bs_demo/share/cpp_bs_demo/: local_setup.sh  package.bash  package.sh  package.zsh
install/cpp_bs_demo/share/cpp_bs_demo/urdf/: ball_obstacle.urdf
install/cpp_bs_demo_interfaces/share/cpp_bs_demo_interfaces/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh
install/cpp_bs_demo_interfaces/share/cpp_bs_demo_interfaces/cmake/: cpp_bs_demo_interfaces__rosidl_typesupport_cExport.cmake  export_cpp_bs_demo_interfaces__rosidl_generator_cExport.cmake  export_cpp_bs_demo_interfaces__rosidl_generator_cppExport.cmake  export_cpp_bs_demo_interfaces__rosidl_generator_pyExport.cmake  export_cpp_bs_demo_interfaces__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake
log/: latest_build
(+26 files in other folders)
